--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="/src/assets/css/style.css" rel="stylesheet">
     <title>Vite App</title>
   </head>
-  <body class="antialiased bg-zinc-950 w-full font-display relative">
+  <body class="antialiased bg-zinc-950 w-full font-display relative selection:bg-orange-500/15">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
